Remove audio element and fix HTML structure
Removed audio element and fixed closing div tag.

--- a/index.html
+++ b/index.html
@@ -110,13 +110,7 @@
         <img src="https://i.ibb.co/F4Y3JH92/tiktok.png"/>
         <img src="https://i.ibb.co/Wpk7V8n9/PWA.png"/>
       </div>
-    </div>
-
-    </html>
-  <audio controls preload="auto">
-    <source src="https://stream.zeno.fm/ycyx8mbg65quv" type="audio/mpeg">
-    Tu navegador no soporta la etiqueta de audio.
-</audio>  
+    </div
     
     <div class="player">
       <div class="live-tag">LIVE</div>
